fixed overflowing bugs in iOS

--- a/src/styles/components/consent-dialog.scss
+++ b/src/styles/components/consent-dialog.scss
@@ -1,7 +1,6 @@
 %consent-dialog-inner-shadow {
-  box-shadow: 0 0 $spacing-4 var(--color-white, $color-white), 0 0 $spacing-3 var(--color-white, $color-white),
-    0 0 $spacing-2 var(--color-white, $color-white), 0 0 $spacing-1 var(--color-white, $color-white),
-    0 0 $spacing-05 var(--color-white, $color-white);
+  // prettier-ignore
+  box-shadow: 0 0 $spacing-4 var(--color-white, $color-white), 0 0 $spacing-3 var(--color-white, $color-white), 0 0 $spacing-2 var(--color-white, $color-white), 0 0 $spacing-1 var(--color-white, $color-white), 0 0 $spacing-05 var(--color-white, $color-white);
 
   // box-shadow: 0 0 $spacing-4 var(--color-bw-10, $color-bw-10), 0 0 $spacing-3 var(--color-bw-10, $color-bw-10), 0 0 $spacing-2 var(--color-bw-10, $color-bw-10), 0 0 $spacing-1 var(--color-bw-10, $color-bw-10), 0 0 $spacing-05 var(--color-bw-10, $color-bw-10);
 }
@@ -13,9 +12,10 @@
   position: fixed;
   z-index: 2147483631;
   display: block;
-  width: calc(100% - $spacing-2);
+  width: calc(100vw - $spacing-2);
   max-width: 900px;
-  max-height: calc(100% - $spacing-2);
+  max-height: calc(100% - $spacing-3);
+  max-height: calc(100dvh - $spacing-3);
   border-radius: var(--border-radius, $base-border-radius);
   background-color: var(--color-white, $color-white);
   color: var(--base-color, $color-grey-3);
@@ -68,16 +68,13 @@
     position: relative;
     z-index: 1;
     display: flex;
+    gap: $spacing-1;
+    flex: 1 0 auto;
     flex-direction: column-reverse;
     justify-content: flex-end;
     margin: 0;
     padding: $spacing-2;
     border-top: var(--base-line, $base-line);
-  }
-
-  // .consent-dialog__footer-buton
-  &__f-b + &__f-b {
-    margin: 0 0 $spacing-1 0;
   }
 
   @media ($md-up) {
@@ -90,11 +87,8 @@
     }
 
     &__f {
+      gap: $spacing-2;
       flex-direction: row;
-    }
-
-    &__f-b + &__f-b {
-      margin: 0 0 0 $spacing-2;
     }
   }
 }
